# ylcs-kmp

./: .gitattributes  .gitignore  .gitmodules  404.html  LICENSE  README.md  README_en.md  build.gradle.kts  gradle.properties  index.html  libs.versions.toml  settings.gradle.kts  sitemap.xml
.fleet/: receipt.json
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  docs.yml  main.yml  publish.yml  release.yml  release_android.yml  release_ios.yml  release_linux.yml  release_macos.yml  release_web.yml  release_windows.yml
.run/: AndroidRun.run.xml  LyricsEditor.run.xml  androidPackage.run.xml  androidPublish.run.xml  dependencies.run.xml  desktopCheckModules.run.xml  desktopPublish.run.xml  desktopRunDebug.run.xml  desktopRunRelease.run.xml  dokkaGenerateHtml.run.xml  galleryPublish.run.xml  galleryRun.run.xml  landpagePublish.run.xml  landpageRun.run.xml  lyricsEditor.run.xml  modManagerPublish.run.xml  modManagerRunDebug.run.xml  nativePlatformLibRelease.run.xml  publishToMavenCentral.run.xml  publishToMavenLocal.run.xml  serverPublish.run.xml  serverRun.run.xml  webPublish.run.xml  webRun.run.xml
artifacts/include/: native_jni.h
buildSrc/: build.gradle.kts  settings.gradle.kts
composeApp/: R8Android.pro  R8Common.pro  R8Desktop.pro  build.gradle.kts
config/: androidKey.jks  androidR8.pro  desktopR8.pro
config/emoji/: manifest.json
config/song/: song.csv
cpp/: CMakeLists.txt  build.bat
cpp/include/: platform.h  platform_linux.h  platform_mac.h  platform_win.h  platform_win_com.h
cpp/libmmkv/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  libmmkv.vcxproj  libmmkv.vcxproj.filters
cpp/mmkv/: CMakeLists.txt  MMKVPredef.h  MMKV_IO.cpp  cmake_install.cmake  libmmkv.sln  main.cpp
cpp/picker/: CmakeLists.txt
cpp/ylcs/: CMakeLists.txt  main.cpp  picker.cpp
design-AE/splash/: splash.aep
design/PS/: click_animation_note.psd
docs/markdown/: ffmpeg.md  music.md
dokka/: package-list
dokka/scripts/: pages.json  sourceset_dependencies.js
ffmpeg/: index.html
gallery/: love.yinlin.gallery.js  love.yinlin.gallery.js.map
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: Podfile
iosApp/Configuration/: Config.xcconfig
iosApp/core/: AVKitExt.swift  PIPView.swift
iosApp/iosApp/: ContentView.swift  Info.plist  LaunchScreen.storyboard
iosApp/iosApp.xcodeproj/: project.pbxproj
mod/: index.html
modManager/: build.gradle.kts
music/: build.gradle.kts
native/: CMakeLists.txt  build.sh  main.cpp  ylcs_init.h  ylcs_jni.cpp  ylcs_jni.h  ylcs_mmkv.cpp  ylcs_nativefiledialog.cpp  ylcs_platform.cpp
native/mmkv/: CMakeLists.txt
native/mmkv/Core.xcodeproj/: project.pbxproj
native/platform/: CMakeLists.txt
native/platform/include/: platform.h
native/platform/linux/: message.cpp  window.cpp
native/platform/macos/: message.cpp  window.m
native/platform/windows/: message.cpp  player.cpp  window.cpp
overrides/dokka/: index.html  navigation.html  package-list
overrides/gallery/: index.html  love.yinlin.gallery.js  love.yinlin.gallery.js.map
search/: search_index.json
server/: build.gradle.kts
shared/: build.gradle.kts
test/: index.html
tool/ffmpeg/: index.html
tool/mod/: index.html
ylcs-app/: build.gradle.kts  ylcs-app.podspec
ylcs-app/android-app/: build.gradle.kts
ylcs-app/androidApp/: build.gradle.kts
ylcs-app/app/: build.gradle.kts
ylcs-app/config/: icon.icns
ylcs-app/cs/: build.gradle.kts
ylcs-app/desktop-app/: build.gradle.kts
ylcs-app/desktopApp/: build.gradle.kts
ylcs-app/gallery/: build.gradle.kts
ylcs-app/iosApp/: Podfile
ylcs-app/landpage/: build.gradle.kts
ylcs-app/lyrics-editor/: build.gradle.kts
ylcs-app/lyricsEditor/: build.gradle.kts
ylcs-app/mod/: build.gradle.kts  mod.md
ylcs-app/mod-manager/: build.gradle.kts
ylcs-app/proguard/: R8Android.pro  R8Common.pro  R8Desktop.pro
ylcs-app/script/: compress_webp.py  webp_animation_compress.bat
ylcs-app/server/: build.gradle.kts
ylcs-app/shared/: build.gradle.kts  ylcs-app.podspec
ylcs-app/web-app/: build.gradle.kts
ylcs-app/webApp/: build.gradle.kts
ylcs-base/compose-core/: build.gradle.kts
ylcs-base/core/: build.gradle.kts
ylcs-base/cs-core/: build.gradle.kts
ylcs-client-engine/: build.gradle.kts
ylcs-compose-core/: build.gradle.kts
ylcs-core/: build.gradle.kts
ylcs-core-compose/: build.gradle.kts
ylcs-core/base/: build.gradle.kts
ylcs-core/compose-base/: build.gradle.kts
ylcs-core/cs-base/: build.gradle.kts
ylcs-cs/: build.gradle.kts
ylcs-cs-core/: build.gradle.kts
ylcs-docs/: mkdocs.yml
ylcs-docs/docs/: index.md  (+1 more)
ylcs-korge/: build.gradle.kts
ylcs-mod/: build.gradle.kts
ylcs-mod-manager/: build.gradle.kts
ylcs-modManager/: build.gradle.kts
ylcs-module/compose/animated-webp-decoder/src/androidMain/cpp/: CMakeLists.txt  libwebp_jni.c  libwebp_jni.cpp
ylcs-module/compose/animated-webp-decoder/src/androidMain/cpp/libwebp/: CMakeLists.txt
ylcs-module/compose/animated-webp/src/androidMain/cpp/: CMakeLists.txt  libwebp_jni.cpp
ylcs-module/compose/animated-webp/src/androidMain/cpp/libwebp/: Android.mk  CMakeLists.txt
ylcs-module/compose/plugin/animated-webp-decoder-ndk/src/main/cpp/: CMakeLists.txt  libwebp_jni.c
ylcs-module/compose/ui/pag-kmp/src/desktopMain/cpp/: CMakeLists.txt  JPAGComposition.cpp  JPAGComposition.h  JPAGDecoder.cpp  JPAGDecoder.h  JPAGDiskCache.cpp  JPAGFont.cpp  JPAGImage.cpp  JPAGImage.h  JPAGImageLayer.cpp  JPAGImageLayer.h  JPAGLayer.cpp  JPAGLayer.h  JPAGPlayer.cpp  JPAGShapeLayer.cpp  JPAGShapeLayer.h  JPAGSolidLayer.cpp  JPAGSolidLayer.h  JPAGSurface.cpp  JPAGSurface.h  JPAGTextLayer.cpp  JPAGTextLayer.h  JPAGUtils.cpp  JPAGUtils.h  JPAGVideoDecoder.cpp  KPAGImage.cpp  KPAGImage.h  main.cpp
ylcs-module/foundation/os/desktop-player/src/main/cpp/: CMakeLists.txt
ylcs-module/startup/mmkv-kmp/src/desktopMain/cpp/: CMakeLists.txt  main.cpp
ylcs-music/: build.gradle.kts
ylcs-old/: build.gradle.kts
ylcs-server/: build.gradle.kts
ylcs-server-engine/: build.gradle.kts
ylcs-shared/: build.gradle.kts
(+10802 files in other folders)
